updated css, created other component

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
     width: 100%;
     height: 100vh;
     background-position: center;
+    overflow: hidden;
 }
 
 code {
@@ -80,7 +81,7 @@ code {
 .dash1{
    color: #ECE8E8;
     background-color:#1C2B3D;
-    width: 23rem;
+    width: 20rem;
     height: 48rem;
     margin: 0;
     position: relative;
@@ -135,12 +136,13 @@ code {
 }
 .dash1 img{
   position: absolute;
-  left: 2.8rem;
+  left: 4rem;
+  top: 0.5rem;
 }
 .dash1 p{
   position: absolute;
-  left: 6rem;
-  top: 12rem;
+  left: 7rem;
+  top: 12.5rem;
 }
 .nextbtn{
   position: absolute;
@@ -262,7 +264,7 @@ code {
 }
 .profilecon{
   position: absolute;
-  left: 12rem;
+  left: 10rem;
   top: 1rem;
   width: 35rem;
 }
